--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ rich = "^12.6.0"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.18.0"
+pytest = "^7.2.0"
+pandas = "^1.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
